# ai-nlp-servers

./: POETRY.md  README.md
.github/workflows/: clean.yml  python-poetry-test-app.yml  python-poetry-test-back.yml  server-back-test.yml
apps/back/: .dockerignore  Dockerfile  README.md  containers.md  pyproject.toml
apps/back/back/: main.py
apps/back/tests/: test_main.py  test_project_fastapi.py  test_spacy.py
apps/spacy_projects/: README.md  pyproject.toml  requirements.txt
apps/spacy_projects/ner_demo_expand/: README.md  project.yml  test_project_ner_demo_expand.py
apps/spacy_projects/ner_demo_expand/assets/: dev.json  train.json
apps/spacy_projects/ner_demo_expand/scripts/: create_config.py  visualize_model.py
