[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["Derfulio <36664091+Derfulio@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
